@@ -1,5 +1,6 @@
 0.3.0
- - feat: allow to define a measurement duration when generating sinograms
+ - feat: allow to specify a measurement duration or the frame times
+   when generating sinograms
 0.2.1
  - ref: migrate to flimage
 0.2.0
